# multimedia_audio_lite

./: OAT.xml  README.md  README_zh.md  audio_capturer_impl.cpp  bundle.json
audio_encoder/: audio_encoder.cpp
audio_source/: audio_source.cpp
frameworks/: BUILD.gn  audio_capturer.cpp  audio_capturer_client.cpp  audio_capturer_client.h  audio_capturer_impl.cpp  audio_capturer_impl.h
frameworks/audio_encoder/: audio_encoder.cpp
frameworks/audio_encoder/include/: audio_encoder.h
frameworks/audio_source/: audio_source.cpp
frameworks/audio_source/include/: audio_source.h
frameworks/binder/: audio_capturer_client.cpp  audio_capturer_client.h
frameworks/passthrough/: audio_capturer_client.cpp  audio_capturer_client.h
interfaces/kits/: audio_capturer.h
services/: BUILD.gn
services/impl/: audio_capturer_impl.cpp  audio_capturer_impl.h
services/impl/audio_encoder/: audio_encoder.cpp
services/impl/audio_encoder/include/: audio_encoder.h
services/impl/audio_source/: audio_source.cpp
services/impl/audio_source/include/: audio_source.h
services/include/: audio_capturer_server.h
services/server/include/: audio_capturer_server.h
services/server/src/: audio_capturer_samgr.cpp  audio_capturer_server.cpp
services/src/: audio_capturer_samgr.cpp  audio_capturer_server.cpp
test/: BUILD.gn
test/unittest/: audiolite_test.cpp  audiolite_test.h
