# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

shared_library("audio_capturer_lite") {
  sources = [
    "audio_capturer.cpp",
    "audio_capturer_client.cpp",
  ]

  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/multimedia/audio_lite/interfaces/kits",
    "//foundation/multimedia/audio_lite/services/include",
    "//foundation/multimedia/utils/lite/interfaces/kits",
    "//foundation/multimedia/audio_lite/frameworks",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
    "//base/security/permission/interfaces/kits/permission_lite",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
  ]

  deps = [
    "//base/security/permission/services/permission_lite/pms_client:pms_client",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/graphic/surface:lite_surface",
    "//foundation/multimedia/utils/lite:media_common",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

shared_library("audio_capturer_impl") {
  sources = [
    "audio_capturer_impl.cpp",
    "audio_encoder/audio_encoder.cpp",
    "audio_source/audio_source.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags += [ "-Werror" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/multimedia/audio_lite/frameworks/audio_encoder/include",
    "//foundation/multimedia/audio_lite/frameworks/audio_source/include",
    "//foundation/multimedia/audio_lite/frameworks",
    "//foundation/multimedia/audio_lite/interfaces/kits",
    "//foundation/multimedia/audio_lite/services/include",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//foundation/multimedia/utils/lite/interfaces/kits",
    "//drivers/peripheral/format/interfaces/include",
  ]

  outdir = rebase_path("$root_out_dir")
  public_configs = [ ":audio_external_library_config" ]
  ldflags = [
    "-L$outdir",
    "-lcodec",
    "-laudio_hw",
    "-lpthread",
  ]
  deps = [
    "//foundation/graphic/surface:lite_surface",
    "//foundation/multimedia/utils/lite:media_common",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

config("audio_external_library_config") {
  include_dirs = [ "//foundation/multimedia/audio_lite/interfaces/kits" ]
  include_dirs += [ "//foundation/multimedia/utils/lite/interfaces/kits" ]
}
