# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

static_library("audio_capturer_server") {
  sources = [
    "src/audio_capturer_samgr.cpp",
    "src/audio_capturer_server.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = [
    "//foundation/multimedia/audio_lite/services/include",
    "//foundation/multimedia/audio_lite/interfaces/kits",
    "//foundation/multimedia/audio_lite/frameworks",
    "//third_party/bounds_checking_function/include",
    "//base/security/permission/interfaces/kits/permission_lite",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/communication/broadcast",
    "//foundation/multimedia/utils/lite/interfaces/kits",
  ]

  deps = [
    "//base/security/permission/services/permission_lite/pms_client:pms_client",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface:lite_surface",
    "//foundation/multimedia/audio_lite/frameworks:audio_capturer_impl",
    "//foundation/multimedia/utils/lite:media_common",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}
